# plant-disease-detector

./: README.md  build.sh  db.sqlite3  pyproject.toml
corn/: apps.py  serializers.py  urls.py  views.py
corn/models/corn_saved_model/: fingerprint.pb  saved_model.pb
corn/models/corn_saved_model/variables/: variables.index
pepper/: apps.py  models.py  serializers.py  urls.py  views.py
plants/: props.py  settings.py  urls.py
tomato/: serializers.py  views.py
